# strictpp

./: .clang-format  .gitignore  CMake2  CMakeLists.txt  README.md  strictppConfig.cmake
benchmark/: Makefile
benchmarks/: CMakeLists.txt  array1D_bm.cpp  fixedarray1D_bm.cpp
cmake/: strictppConfig.cmake  strictppConfig.cmake.in
example/: CMakeLists.txt  Makefile  example0.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp
examples/: CMakeLists.txt  example0.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp
src/: array_ops.hpp  attach2D.hpp  derived1D.hpp  derived2D.hpp  iterator.hpp  slice.hpp  slicearray_base2D.hpp
src/ArrayCommon/: storage.hpp
src/Util/: error_tools.hpp
strictpp/: CMakeLists.txt  Makefile  array_IO.hpp  array_base1D.hpp  array_base2D.hpp  array_ops.hpp  array_stable_ops.hpp  attach1D.hpp  attach2D.hpp  cmake_install.cmake  complex_val.hpp  concepts.hpp  derived1D.hpp  derived2D.hpp  derived_base.hpp  fixed_array_base1D.hpp  fixed_array_base2D.hpp  iterator.hpp  slice.hpp  slicearray_base1D.hpp  slicearray_base2D.hpp  strict.hpp
strictpp/ArrayCommon/: algorithm.hpp  alignment.hpp  array_auxiliary.hpp  array_common.hpp  array_traits.hpp  index_helper.hpp  use.hpp  valid.hpp
strictpp/Eigen/: eigen.hpp  map.hpp  matrix_ops.hpp
strictpp/Expr/: binary.hpp  exclude_last.hpp  expr.hpp  expr_traits.hpp  functors.hpp  special.hpp  types.hpp  unary.hpp
strictpp/StrictCommon/: auxiliary_types.hpp  common_traits.hpp  config.hpp  constants.hpp  error.hpp  strict_IO.hpp  strict_common.hpp  strict_literals.hpp  strict_math.hpp  strict_traits.hpp  strict_val.hpp  strict_val_ops.hpp  use.hpp
strictpp/Util/: error_tools.hpp  random.hpp  random_traits.hpp  semi_random.hpp  timer.hpp  util.hpp
tests/: CMakeLists.txt  Makefile  array1D.cpp  array2D.cpp  array_1Dvs2D.cpp  array_ops.cpp  array_stable_ops.cpp  constexpr.cpp  empty.cpp  error_tools.cpp  expr.cpp  fixed_array1D.cpp  fixed_array2D.cpp  info.cpp  iterator.cpp  run.sh  slicearray.cpp  test.hpp
